<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expenses</string>
    <string name="action_settings">Settings</string>
    <string name="accounts_title">Accounts</string>
    <string name="expenses_title">Expenses</string>
    <string name="title_activity_display_expenses_list">Expenses</string>
    <string name="title_activity_edit_accounts">Accounts</string>
    <string name="title_activity_edit_expenses">Expenses</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_payment_methods_list">Payment Methods</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="loading">Loading</string>
    <string name="updating">Updating</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="date">Date</string>
    <string name="search_expenses">Search expenses</string>
    <string name="expenses_small">expenses</string>
    <string name="editaccount_name">Name</string>
    <string name="editaccount_currency">Preferred currency</string>
    <string name="editexpense_name">Name</string>
    <string name="editexpense_amount">Amount</string>
    <string name="editexpense_category">Category</string>
    <string name="editexpense_payment_method">Payment method</string>
    <string name="currency_prompt">Choose a currency</string>
    <string name="category_prompt">Choose a category</string>
    <string name="payment_method_prompt">Choose a payment method</string>
    <string name="new_account">New account</string>
    <string name="edit_account">Edit account</string>
    <string name="delete_account">Delete account</string>
    <string name="stat_account">Account statistics</string>
    <string name="account_update_message">Account updated.</string>
    <string name="account_delete_message">Account deleted.</string>
    <string name="account_create_message">Account created.</string>
    <string name="new_expense">New expense</string>
    <string name="edit_expense">Edit expense</string>
    <string name="delete_expense">Delete expense</string>
    <string name="filter_expense">Filter expenses list</string>
    <string name="expense_update_message">Expense updated.</string>
    <string name="expense_delete_message">Expense deleted.</string>
    <string name="expense_create_message">Expense created.</string>
    <string name="input_check">Please check your input!</string>
    <string name="loading_accounts">Loading accounts</string>
    <string name="loading_expenses">Loading expenses</string>
    <string name="delete_account_confirm">Deleting an account will also delete all of its expenses.
        \nAre you sure you wish to delete this account?</string>
    <string name="delete_expense_confirm">Are you sure you wish to delete this expense?</string>
    <string name="currency_update">Updating exchange rates</string>
    <string name="currency_update_success">Exchange rates updated</string>
    <string name="currency_update_error">An error occurred while updating the exchange rates.</string>
    <string name="currency_update_prompt">It is recommended to regularly update the exchange rates.
        \nDo you wish to perform this action now?</string>
    <string name="pref_currency_title">Currency</string>
    <string name="pref_currency_update_title">Update exchange rates</string>
    <string name="pref_currency_update_text">Gets the most recent exchange rates from an online source.</string>
    <string name="pref_currency_base_title">Set base currency</string>
    <string name="pref_currency_base_text">Sets the base currency your expenses will be converted to.</string>
    <string name="pref_miscellaneous_title">Miscellaneous</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_text">About this application</string>
    <string name="pref_about_message_title">About Expenses</string>
    <string name="pref_about_message_text">© 2013 by Benjamin Mestdagh</string>
    <string name="pref_payment_methods_title">Payment methods</string>
    <string name="pref_payment_methods_set">Adjust payment methods</string>
    <string name="new_payment_method">New payment method</string>
    <string name="edit_payment_method">Edit payment method</string>
    <string name="delete_payment_method">Delete payment method</string>
    <string name="payment_method_type">Type</string>
    <string name="payment_method_type_prompt">Choose a type</string>
    <string name="payment_method_name">Name</string>
    <string name="loading_payment_methods">Loading payment methods</string>
    <string name="title_activity_edit_payment_method">Payment Methods</string>
    <string name="delete_payment_method_confirm">Are you sure you wish to delete this payment method?</string>
    <string name="payment_method_create_message">Payment method created.</string>
    <string name="payment_method_update_message">Payment method updated.</string>
    <string name="payment_method_delete_message">Payment method deleted.</string>
    <string name="delete_payment_method_error">You cannot delete this payment method because it is used
    in expenses!</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="loading_stats">Loading statistics</string>
    <string name="title_fragment_overview_statistics">Overview</string>
    <string name="stat_overview_amount_title">Amounts</string>
    <string name="stat_overview_max_amount">Highest amount: </string>
    <string name="stat_overview_min_amount">Lowest amount: </string>
    <string name="stat_overview_avg_amount">Average amount: </string>
    <string name="stat_overview_currency_title">Currencies</string>
    <string name="stat_overview_max_currency">Most used currency: </string>
    <string name="stat_overview_min_currency">Least used currency: </string>
    <string name="stat_overview_category_title">Categories</string>
    <string name="stat_overview_max_category">Most used category: </string>
    <string name="stat_overview_min_category">Least used category: </string>
    <string name="stat_overview_payment_method_title">Payment methods</string>
    <string name="stat_overview_max_payment_method">Most used payment method: </string>
    <string name="stat_overview_min_payment_method">Least used payment method: </string>
    <string name="stat_overview_date_range">Date range</string>
    <string name="stat_chart_amount_per_date">Amount per date</string>
    <string name="stat_chart_amount_per_weekday">Amount per weekday</string>
    <string name="stat_chart_amount_per_currency">Amount per currency</string>
    <string name="stat_chart_amount_per_category">Amount per category</string>
    <string name="stat_chart_amount_per_payment_method">Amount per payment method</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

</resources>
