<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".EditExpensesActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/editexpense_title"
            android:layout_gravity="left|center_vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

    <ScrollView
            android:id="@+id/editexpense_scrollview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editexpense_title">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                    android:text="@string/editexpense_name"
                    android:id="@+id/editexpense_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

            <EditText
                    android:id="@+id/editexpense_editname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editexpense_name"
                    android:hint="@string/editexpense_name"
                    android:singleLine="true"/>

            <TextView
                    android:text="@string/editexpense_amount"
                    android:id="@+id/editexpense_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editexpense_editname"
                    android:layout_marginTop="20dp" />

            <Spinner
                    android:id="@+id/currencyselector"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:prompt="@string/currency_prompt"
                    android:layout_below="@+id/editexpense_amount" />

            <EditText
                    android:id="@+id/editexpense_editamount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/currencyselector"
                    android:layout_below="@+id/editexpense_amount"
                    android:layout_alignBottom="@+id/currencyselector"
                    android:hint="@string/editexpense_amount"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

            <TextView
                    android:text="@string/editexpense_category"
                    android:id="@+id/editexpense_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/currencyselector"
                    android:layout_marginTop="20dp" />

            <Spinner
                    android:id="@+id/categoryselector"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/category_prompt"
                    android:layout_below="@+id/editexpense_category" />

            <TextView
                    android:text="@string/editexpense_payment_method"
                    android:id="@+id/editexpense_payment_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/categoryselector"
                    android:layout_marginTop="20dp" />

            <Spinner
                    android:id="@+id/paymentmethodselector"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/payment_method_prompt"
                    android:layout_below="@+id/editexpense_payment_method" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/paymentmethodselector"
                    android:gravity="center_horizontal">

                <Button
                        android:text="@string/save"
                        android:id="@+id/editexpense_save_button"
                        android:onClick="onSaveExpense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <Button
                        android:text="@string/cancel"
                        android:id="@+id/editexpense_cancel_button"
                        android:onClick="onCancelExpense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
