<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context=".EditPaymentMethodActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/editpayment_method_title"
            android:layout_gravity="left|center_vertical"/>

    <ScrollView
            android:id="@+id/editpayment_method_scrollview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editpayment_method_title">

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

            <TextView
                    android:text="@string/payment_method_name"
                    android:id="@+id/editaccount_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

            <EditText
                    android:id="@+id/editpayment_method_editname"
                    android:hint="@string/payment_method_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editaccount_name"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"/>

            <TextView
                    android:text="@string/payment_method_type"
                    android:id="@+id/editpayment_method_type"
                    android:layout_below="@+id/editpayment_method_editname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

            <Spinner
                    android:id="@+id/editpayment_method_type_selection"
                    android:layout_below="@+id/editpayment_method_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/payment_method_type_prompt"
                    android:layout_marginBottom="10dp"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editpayment_method_type_selection"
                    android:gravity="center_horizontal" >

                <Button
                        android:text="@string/save"
                        android:id="@+id/editpayment_method_save_button"
                        android:onClick="onSavePaymentMethod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                <Button
                        android:text="@string/cancel"
                        android:id="@+id/editpayment_method_cancel_button"
                        android:onClick="onCancelPaymentMethod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
